--- a/admin.html
+++ b/admin.html
@@ -8,7 +8,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.31/jspdf.plugin.autotable.min.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     
-    <link rel="stylesheet" href="admin.css">
+    <link rel="stylesheet" href="admin.css"/>
 </head>
 <body>
     <div class="admin-container">
@@ -66,9 +66,6 @@
             <div class="menu-item" data-section="settings">
                 <span class="menu-icon">⚙️</span>
                 <span>Settings</span>
-            </div>
-                    <div style="padding: 1.5rem; margin-top: 1rem;">
-                <a class="btn btn-secondary" href="index.html" style="display:block;text-align:center;text-decoration:none;">← View Website</a>
             </div>
         </div>
 
@@ -628,6 +625,6 @@
     </div>
 
     
-    <script src="admin.js" defer></script>
+    <script defer src="admin.js"></script>
 </body>
 </html>
